crates/iam-grapher/src/cli/snapshots/aws_iam_grapher__cli__query__tests__account_group_json_shape.snap
---
source: crates/iam-grapher/src/cli/query.rs
expression: group
---
{
  "account_id": "123456789012",
  "snapshot_id": "snap-a",
  "results": [
    {
      "arn": "arn:aws:iam::123456789012:role/Example",
      "name": "Example",
      "entity_type": "Role",
      "is_full_admin": false,
      "resource": "arn:aws:s3:::example-bucket/*",
      "is_bounded": false,
      "conditional": false,
      "unevaluated_condition_keys": []
    }
  ]
}
